--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,3 +89,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+    fonts:
+      - family: Roboto
+        fonts:
+            - asset: assets/fonts/Roboto-Regular.ttf
+              weight: 400
+
