--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   dots_indicator: ^2.1.0
   persistent_bottom_nav_bar: ^5.0.2
+  shared_preferences: ^2.0.16
   get:
 
 
