--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   shared_preferences: ^2.0.16
   get:
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
